--- a/app/src/main/res/drawable/bg_layout_white.xml
+++ b/app/src/main/res/drawable/bg_layout_white.xml
@@ -5,6 +5,6 @@
         android:color="#FFF"/>
     <corners
 
-        android:topRightRadius="50dp"
+        android:radius="50dp"
         />
 </shape>
