--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="@color/White"
+            android:elevation="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -28,8 +29,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_marginStart="20dp"
+                android:layout_marginBottom="2dp"
                 android:fontFamily="@font/medium"
-                android:text="Profile Detail"
+                android:elevation="2dp"
+                android:text="@string/profile_detail"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -50,7 +53,7 @@
                 android:layout_height="85dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
-                android:src="@drawable/ic_launcher_background"/>
+                android:src="@drawable/gw"/>
             <Button
                 android:id="@+id/btnEdit"
                 android:layout_width="80dp"
@@ -70,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="100dp"
-                    android:text="Nama Akun"
+                    android:text="XAE-13"
                     android:textColor="@color/Pink"
                     android:textSize="24dp" />
 
@@ -79,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="100dp"
-                    android:text="Email"
+                    android:text="@string/email2"
                     android:textSize="18dp" />
 
                 <TextView
@@ -87,7 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="100dp"
-                    android:text="No.Handphone"
+                    android:text="+6287788661921"
                     android:textSize="18dp" />
 
             </LinearLayout>
@@ -211,37 +214,6 @@
                     android:layout_width="28dp"
                     android:layout_height="28dp"
                     android:layout_marginStart="20dp"
-                    android:src="@drawable/review" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="15dp"
-                    android:fontFamily="@font/medium"
-                    android:text="Rate Nusa Licious"
-                    android:textColor="#4F5052"
-                    android:textSize="19sp" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginLeft="2dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="2dp"
-                android:background="#EDEDED" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginStart="20dp"
                     android:src="@drawable/gift" />
 
                 <TextView
@@ -273,6 +245,39 @@
                     android:layout_width="28dp"
                     android:layout_height="28dp"
                     android:layout_marginStart="20dp"
+                    android:src="@drawable/review" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="15dp"
+                    android:fontFamily="@font/medium"
+                    android:text="Rate Nusa Licious"
+                    android:textColor="#4F5052"
+                    android:textSize="19sp" />
+            </LinearLayout>
+
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="2dp"
+                android:background="#EDEDED" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_marginStart="20dp"
                     android:src="@drawable/logout" />
 
                 <TextView
@@ -283,7 +288,8 @@
                     android:fontFamily="@font/medium"
                     android:text="Keluar"
                     android:textColor="@color/Red"
-                    android:textSize="19sp" />
+                    android:textSize="19sp"
+                    tools:ignore="HardcodedText" />
 
             </LinearLayout>
             <View
