--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -74,6 +74,7 @@
                         tools:ignore="HardcodedText" />
 
                     <TextView
+                        android:id="@+id/change_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="right"
@@ -141,7 +142,8 @@
                         android:textColor="@android:color/black"/>
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/alamat_penerima"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text="Jl Haji Naim\ngang senggol"
@@ -168,6 +170,7 @@
                         android:textColor="@android:color/black"/>
 
                     <TextView
+                        android:id="@+id/nomer_penerima"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -195,6 +198,7 @@
                         android:textColor="@android:color/black"/>
 
                     <TextView
+                        android:id="@+id/hint"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -225,17 +229,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:text="@string/remove_chart"
-                android:textColor="@color/Red"
-                android:fontFamily="@font/medium"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginEnd="10dp"-->
+<!--                android:text="@string/remove_chart"-->
+<!--                android:textColor="@color/Red"-->
+<!--                android:fontFamily="@font/medium"-->
+<!--                android:textSize="14sp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/cardView2" />-->
 
             <View
                 android:id="@+id/view_1"
