--- a/adminpanels/src/main/res/layout/activity_main.xml
+++ b/adminpanels/src/main/res/layout/activity_main.xml
@@ -208,13 +208,13 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
-                            android:text="COMING SOON"
+                            android:text="@string/pesanan"
                             android:textSize="18dp"
                             android:textColor="@android:color/black"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:text="@string/transaksi_pesanan"
                             android:textSize="16dp"
                             android:layout_gravity="center"/>
                     </LinearLayout>
