--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -116,7 +115,7 @@
                     tools:ignore="RtlHardcoded">
 
                     <TextView
-                        android:id="@+id/jumlah_item_payment"
+                        android:id="@+id/jumlah_item_payment4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2Pax."
@@ -217,6 +216,7 @@
                         android:textColor="@android:color/black" />
 
                     <Button
+                        android:id="@+id/btn_g_pay"
                         android:layout_width="150dp"
                         android:layout_height="40dp"
                         android:background="#05AF68"
@@ -283,6 +283,7 @@
                         android:textColor="@android:color/black" />
 
                     <Button
+                        android:id="@+id/btn_m_pay"
                         android:layout_width="150dp"
                         android:layout_height="40dp"
                         android:background="#00AC66"
@@ -292,4 +293,15 @@
             </RelativeLayout>
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/CheckoutRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="10dp"
+        android:visibility="gone"
+        tools:listitem="@layout/item_row_chart"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
