--- a/adminpanels/src/main/res/layout/activity_data_add_menu.xml
+++ b/adminpanels/src/main/res/layout/activity_data_add_menu.xml
@@ -68,35 +68,36 @@
                 android:maxLength="8" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginTop="5dp"
-            android:hint="Kategori">
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="55dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:hint="Kategori">-->
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtKategori"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text" />
-        </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/txtKategori"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:inputType="text" />-->
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/select_category"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:hint="Pilih Kategori"
+                android:visibility="gone"
                 android:textSize="20dp"
                 android:textColor="@android:color/holo_red_dark"
                 android:textColorHint="@android:color/black"/>
             <Spinner
                 android:id="@+id/spin_category"
-                android:layout_width="40dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:gravity="center"/>
         </LinearLayout>
