--- a/adminpanels/src/main/res/values/styles.xml
+++ b/adminpanels/src/main/res/values/styles.xml
@@ -4,17 +4,26 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-
-        <item name="windowActionBar">true</item>
-        <item name="windowActionBarOverlay">true</item>
-        <item name="actionBarStyle">@style/MyActionBar</item>
+        <item name="colorAccent">@android:color/black</item>
+<!--        <item name="windowActionBar">true</item>-->
+<!--        <item name="windowActionBarOverlay">true</item>-->
+<!--        <item name="actionBarStyle">@style/MyActionBar</item>-->
     </style>
 
     <style name="MyActionBar" parent="Theme.AppCompat.NoActionBar">
         <item name="actionMenuTextColor">#fff</item>
         <item name="android:titleTextColor">#fff</item>
         <item name="android:actionMenuTextColor">#fff</item>
+    </style>
+
+    <style name="outline_box" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+       <item name="boxStrokeColor">@color/colorTop</item>
+       <item name="android:layout_height">wrap_content</item>
+       <item name="android:layout_width">match_parent</item>
+       <item name="android:layout_marginTop">8dp</item>
+       <item name="android:layout_marginLeft">20dp</item>
+       <item name="android:layout_marginRight">20dp</item>
+
     </style>
 
 </resources>
