admin login, combo box, responsive layout

--- a/adminpanels/src/main/res/layout/activity_data_add_menu.xml
+++ b/adminpanels/src/main/res/layout/activity_data_add_menu.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Activity.DataAddMenuActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/addToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/accent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/addToolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:background="@color/accent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-    </androidx.appcompat.widget.Toolbar>
+<!--    </androidx.appcompat.widget.Toolbar>-->
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -68,18 +68,6 @@
                 android:maxLength="8" />
         </com.google.android.material.textfield.TextInputLayout>
 
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="55dp"-->
-<!--            android:layout_marginTop="5dp"-->
-<!--            android:hint="Kategori">-->
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/txtKategori"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="text" />-->
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -105,19 +93,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/select_catering"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:hint="Pilih Katering"
+                android:visibility="gone"
                 android:textSize="20dp"
                 android:textColor="@android:color/holo_red_dark"
                 android:textColorHint="@android:color/black"/>
             <Spinner
                 android:id="@+id/spin_catering"
-                android:layout_width="40dp"
+                android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:gravity="center"/>
         </LinearLayout>
@@ -145,13 +134,15 @@
 
     <ImageView
         android:id="@+id/imgPreview"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_marginBottom="10dp"
+        android:cropToPadding="true"
+        android:src="@drawable/nophoto"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addToolbar"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/pb_menu"
