--- a/adminpanels/src/main/res/layout/cardmenu_item.xml
+++ b/adminpanels/src/main/res/layout/cardmenu_item.xml
@@ -51,26 +51,28 @@
             android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
             android:layout_toEndOf="@id/imgMenuItem2"
+            android:visibility="gone"
             android:text="Descripsi" />
+
         <TextView
             android:id="@+id/textHargaMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textDescMenu"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
             android:layout_toEndOf="@id/imgMenuItem2"
-            android:text="Harga"/>
+            android:layout_below="@+id/textNamaMenu"
+            android:layout_marginTop="3dp"
+            android:text="Harga" />
 
         <TextView
             android:id="@+id/textCat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="5dp"
+            android:layout_below="@+id/textHargaMenu"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="3dp"
             android:layout_marginEnd="50dp"
-            android:layout_toEndOf="@+id/textNamaMenu"
+            android:layout_toEndOf="@+id/imgMenuItem2"
             android:text="Kategori" />
 
         <TextView
@@ -84,6 +86,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="0dp"
+            android:visibility="gone"
             android:text="Katering" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
