--- a/adminpanels/src/main/res/layout-large/activity_admin_login.xml
+++ b/adminpanels/src/main/res/layout-large/activity_admin_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorTop"
-    tools:context=".adminLogin">
+    tools:context=".Activity.adminLogin">
 
     <TextView
         android:layout_width="wrap_content"
