--- a/adminpanels/src/main/res/layout/activity_data_pesanan.xml
+++ b/adminpanels/src/main/res/layout/activity_data_pesanan.xml
@@ -16,13 +16,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerPesanan"
+    <Spinner
+        android:id="@+id/spin_transaksi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:background="@drawable/spinner_layout"
+        android:elevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarPesanan" />
+
+    <FrameLayout
+        android:id="@+id/contentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@+id/spin_transaksi"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
