update childby kategori

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -113,6 +113,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/delivery_location"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
