--- a/app/src/main/res/layout/activity_detail_menu.xml
+++ b/app/src/main/res/layout/activity_detail_menu.xml
@@ -307,7 +307,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp">
 
@@ -342,6 +342,19 @@
                     android:text="Jumlah Pesanan Anda"
                     android:textColor="@android:color/black"
                     tools:ignore="HardcodedText" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/harga_detail_menu"
+                    android:gravity="right">
+                    <TextView
+                        android:id="@+id/tv_minimal_beli"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="50 Porsi"
+                        android:textColor="@android:color/black"
+                        tools:ignore="HardcodedText" />
+                </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
 
