--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -209,6 +209,7 @@
                         android:text="" />
 
                     <TextView
+                        android:id="@+id/saldo_anda"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
