--- a/adminpanels/src/main/res/layout/activity_data_transaksi.xml
+++ b/adminpanels/src/main/res/layout/activity_data_transaksi.xml
@@ -31,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:layout_constraintTop_toBottomOf="@+id/spin_transaksi"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spin_transaksi" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
