--- a/adminpanels/src/main/res/layout/cardmenu_item.xml
+++ b/adminpanels/src/main/res/layout/cardmenu_item.xml
@@ -41,6 +41,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/imgMenuItem2"
+            android:textStyle="bold"
             android:text="Nama" />
 
         <TextView
