--- a/adminpanels/src/main/res/layout-normal-anydpi/activity_main.xml
+++ b/adminpanels/src/main/res/layout-normal-anydpi/activity_main.xml
@@ -26,7 +26,7 @@
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="0dp"
-                android:text="@string/welcome"
+                android:text="Nama"
                 android:textColor="@android:color/white"
                 android:textSize="18dp" />
 
