--- a/app/src/main/res/drawable/btn_orange.xml
+++ b/app/src/main/res/drawable/btn_orange.xml
@@ -4,6 +4,9 @@
     <solid
         android:color="@color/orange_natural"/>
     <corners
-        android:radius="8dp"/>
+        android:topLeftRadius="8dp"
+        android:bottomLeftRadius="8dp"
+        android:topRightRadius="8dp"
+        android:bottomRightRadius="8dp"/>
 
 </shape>
