--- a/adminpanels/src/main/res/layout/cardpembayaran_item.xml
+++ b/adminpanels/src/main/res/layout/cardpembayaran_item.xml
@@ -15,6 +15,12 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/textID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ID"
+                android:textSize="18dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
