--- a/adminpanels/src/main/res/layout/cardpembayaran_item.xml
+++ b/adminpanels/src/main/res/layout/cardpembayaran_item.xml
@@ -20,6 +20,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="ID"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
                 android:textSize="18dp"/>
         <LinearLayout
             android:layout_width="match_parent"
