--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -270,6 +270,7 @@
                 android:background="#EDEDED" />
 
             <LinearLayout
+                android:id="@+id/exit_account"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
