--- a/adminpanels/src/main/res/layout/activity_data_pesanan.xml
+++ b/adminpanels/src/main/res/layout/activity_data_pesanan.xml
@@ -12,17 +12,10 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorTop">
     </androidx.appcompat.widget.Toolbar>
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_data_pesanan"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_below="@id/toolbar_data_pesanan"
-        android:elevation="8dp"/>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvd_data_pesanan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/search_data_pesanan" />
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/toolbar_data_pesanan" />
 </RelativeLayout>
