--- a/adminpanels/src/main/res/layout/card_data_pesanan_item.xml
+++ b/adminpanels/src/main/res/layout/card_data_pesanan_item.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardElevation="8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -142,6 +143,7 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
+                android:layout_marginBottom="10dp"
                 android:text="09.00"/>
         </LinearLayout>
         </LinearLayout>
