--- a/adminpanels/src/main/res/layout-large-notlong/activity_data_user.xml
+++ b/adminpanels/src/main/res/layout-large-notlong/activity_data_user.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,10 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
     </androidx.appcompat.widget.Toolbar>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvd_user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/dToolbar"
-            tools:listitem="@layout/carduser_item" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvd_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dToolbar"
+        tools:listitem="@layout/carduser_item" />
 </RelativeLayout>
