--- a/adminpanels/src/main/res/layout-xlarge-notlong-land/activity_data_pesanan.xml
+++ b/adminpanels/src/main/res/layout-xlarge-notlong-land/activity_data_pesanan.xml
@@ -16,6 +16,8 @@
         android:id="@+id/rvd_data_pesanan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="150dp"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="10dp"
         tools:listitem="@layout/card_data_pesanan_item"
         android:layout_below="@id/toolbar_data_pesanan" />
