--- a/adminpanels/src/main/res/layout-xlarge-notlong/activity_admin_login.xml
+++ b/adminpanels/src/main/res/layout-xlarge-notlong/activity_admin_login.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorTop"
-    tools:context=".Activity.adminRegister">
+    tools:context=".Activity.adminLogin">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="@string/register_1"
+        android:text="Nusalicious"
         android:textColor="@android:color/white"
-        android:textSize="42sp"
+        android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="320dp"
-        android:layout_height="350dp"
+        android:layout_width="480dp"
+        android:layout_height="380dp"
         android:elevation="6dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,26 +34,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/outline_box"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/name">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtSurename"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/outline_box"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="80dp"
                 android:hint="@string/username">
-
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtUsername"
+                    android:id="@+id/txtUsrname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
@@ -60,65 +50,70 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/outline_box"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="80dp"
                 android:hint="@string/password"
                 app:passwordToggleEnabled="true"
                 app:counterMaxLength="6">
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/txtPassword"
+                    android:id="@+id/txtPasswd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:maxLength="6" />
             </com.google.android.material.textfield.TextInputLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24sp"
-                android:text="Password Maks. 6"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <Button
-                    android:id="@+id/btn_regisAdmin"
-                    android:layout_width="match_parent"
+                    android:id="@+id/btn_loginAdmin"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginBottom="80dp"
+                    android:text="@string/login"
+                    android:background="@drawable/button_shape"/>
+
+                <Button
+                    android:id="@+id/btn_registerAdmin"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginBottom="40dp"
-                    android:clickable="true"
-                    android:text="@string/register"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorBot"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginBottom="80dp"
+                    android:text="Register"
                     android:background="@drawable/button_shape"/>
             </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/copyright"
+        android:contentDescription="@string/todo"
         app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="54dp"
-        android:textSize="14sp"
         android:text="@string/copyright_2020_nusalicious"
         android:textColor="@android:color/white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
