--- a/adminpanels/src/main/res/layout-xlarge-notlong/activity_admin_register.xml
+++ b/adminpanels/src/main/res/layout-xlarge-notlong/activity_admin_register.xml
@@ -6,21 +6,23 @@
     android:layout_height="match_parent"
     android:background="@color/colorTop"
     tools:context=".Activity.adminRegister">
+
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:text="@string/register_1"
         android:textColor="@android:color/white"
-        android:textSize="42sp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        android:textSize="60sp"
+        android:layout_marginTop="300dp"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintStart_toStartOf="@+id/cardView" />
+        app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="320dp"
-        android:layout_height="350dp"
+        android:layout_width="420dp"
+        android:layout_height="400dp"
         android:elevation="6dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,11 +34,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/outline_box"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:hint="@string/name">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtSurename"
                     android:layout_width="match_parent"
@@ -62,8 +67,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
-                app:passwordToggleEnabled="true"
-                app:counterMaxLength="6">
+                app:counterMaxLength="6"
+                app:passwordToggleEnabled="true">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txtPassword"
                     android:layout_width="match_parent"
@@ -71,54 +77,58 @@
                     android:inputType="textPassword"
                     android:maxLength="6" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24sp"
-                android:text="Password Maks. 6"/>
+                android:text="Password Maks. 6"
+                android:textSize="20sp"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <Button
                     android:id="@+id/btn_regisAdmin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="40dp"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/button_shape"
                     android:clickable="true"
                     android:text="@string/register"
-                    android:textSize="20sp"
                     android:textColor="@color/colorBot"
-                    android:background="@drawable/button_shape"/>
+                    android:textSize="20sp" />
             </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="85dp"
         android:background="@drawable/copyright"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="54dp"
-        android:textSize="14sp"
+        android:layout_marginEnd="60dp"
         android:text="@string/copyright_2020_nusalicious"
         android:textColor="@android:color/white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
