--- a/adminpanels/src/main/res/layout/card_data_pesanan_item.xml
+++ b/adminpanels/src/main/res/layout/card_data_pesanan_item.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="5dp"
             android:text="Key"
             android:textStyle="bold"
-            android:textSize="18dp"/>
+            android:textSize="20sp"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -34,13 +34,15 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="No "/>
+                android:text="No "
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/text_id_pesanan"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:text="12387984"/>
+                android:text="12387984"
+                android:textSize="18sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,13 +52,15 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Pesanan "/>
+                android:text="Pesanan "
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/text_judul_pesanan"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:text="Nasi Kotak Paket A"/>
+                android:text="Nasi Kotak"
+                android:textSize="18sp"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/expanded_data_pesanan"
@@ -73,13 +77,15 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Katering "/>
+                android:text="Katering "
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/text_katering_pesanan"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:text="DPawon"/>
+                android:text="DPawon"
+                android:textSize="18sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -89,13 +95,15 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Jumlah "/>
+                android:text="Jumlah "
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/text_jumlah_pesanan"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:text="10"/>
+                android:text="10"
+                android:textSize="18sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -105,13 +113,15 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Total "/>
+                android:text="Total "
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/text_total_pesanan"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:text="15000"/>
+                android:text="15000"
+                android:textSize="18sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -121,13 +131,15 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Tanggal "/>
+                android:text="Tanggal "
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/text_tanggal_pesanan"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:text="01/12/2020"/>
+                android:text="01/12/2020"
+                android:textSize="18sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -137,14 +149,16 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="Jam "/>
+                android:text="Jam "
+                android:textSize="18sp"/>
             <TextView
                 android:id="@+id/text_jam_pesanan"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
                 android:layout_marginBottom="10dp"
-                android:text="09.00"/>
+                android:text="09.00"
+                android:textSize="18sp"/>
         </LinearLayout>
         </LinearLayout>
     </LinearLayout>
