--- a/adminpanels/src/main/res/layout/cardmenu_item.xml
+++ b/adminpanels/src/main/res/layout/cardmenu_item.xml
@@ -14,17 +14,6 @@
             android:layout_height="100dp"
             android:src="@drawable/ic_launcher_background"
             android:layout_marginLeft="15dp"/>
-
-        <Button
-            android:id="@+id/btn_edit"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@+id/btn_delete"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="0dp"
-            android:background="@drawable/ic_baseline_edit_24" />
-
         <Button
             android:id="@+id/btn_delete"
             android:layout_width="30dp"
@@ -32,7 +21,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="0dp"
-            android:layout_marginEnd="0dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/ic_baseline_delete_24" />
         <TextView
             android:id="@+id/textNamaMenu"
@@ -42,7 +31,8 @@
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/imgMenuItem2"
             android:textStyle="bold"
-            android:text="Nama" />
+            android:text="Nama"
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/textDescMenu"
@@ -53,7 +43,8 @@
             android:layout_marginLeft="16dp"
             android:layout_toEndOf="@id/imgMenuItem2"
             android:visibility="gone"
-            android:text="Descripsi" />
+            android:text="Descripsi"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/textHargaMenu"
@@ -63,7 +54,8 @@
             android:layout_toEndOf="@id/imgMenuItem2"
             android:layout_below="@+id/textNamaMenu"
             android:layout_marginTop="3dp"
-            android:text="Harga" />
+            android:text="Harga"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/textCat"
@@ -74,7 +66,8 @@
             android:layout_marginTop="3dp"
             android:layout_marginEnd="50dp"
             android:layout_toEndOf="@+id/imgMenuItem2"
-            android:text="Kategori" />
+            android:text="Kategori"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/textMinimum"
