--- a/adminpanels/src/main/res/layout/cardpembayaran_item.xml
+++ b/adminpanels/src/main/res/layout/cardpembayaran_item.xml
@@ -22,7 +22,7 @@
                 android:text="ID"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Penerima  : "
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
             <TextView
                 android:id="@+id/textNamaPembayaran"
                 android:layout_width="match_parent"
@@ -42,7 +42,7 @@
                 android:layout_marginLeft="75dp"
                 android:padding="5dp"
                 android:text="Nama"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@android:color/black"
                 android:textAllCaps="true"/>
         </LinearLayout>
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No HP : "
-            android:textSize="16dp"/>
+            android:textSize="16sp"/>
             <TextView
                 android:id="@+id/textNoTelpPembayaran"
                 android:layout_width="match_parent"
@@ -65,11 +65,10 @@
                 android:layout_marginLeft="101dp"
                 android:padding="5dp"
                 android:text="08888"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textColor="@android:color/black"/>
         </LinearLayout>
         </LinearLayout>
-
         <LinearLayout
                 android:id="@+id/linear_layout_2"
                 android:layout_width="match_parent"
@@ -88,7 +87,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Jumlah : "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textJumlahPembayaran"
@@ -100,7 +99,7 @@
                     android:padding="5dp"
                     android:text="50"
                     android:textColor="@android:color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -113,7 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Total : "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textTotalPembayaran"
@@ -125,7 +124,7 @@
                     android:padding="5dp"
                     android:text="150"
                     android:textColor="@android:color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -138,7 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Metode Pembayaran : "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textMetodePembayaran"
@@ -149,7 +148,7 @@
                     android:padding="5dp"
                     android:text="Gpay"
                     android:textColor="@android:color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -162,7 +161,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Petunjuk : "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textPetunjukPembayaran"
@@ -174,7 +173,7 @@
                     android:padding="5dp"
                     android:text="dpn warung"
                     android:textColor="@android:color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -187,7 +186,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Alamat : "
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textAlamatPembayaran"
@@ -200,7 +199,7 @@
                     android:padding="5dp"
                     android:text="Jl kenangan"
                     android:textColor="@android:color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
