--- a/adminpanels/src/main/res/layout/carduser_item.xml
+++ b/adminpanels/src/main/res/layout/carduser_item.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="10dp"
         android:text="User"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textColor="@android:color/black"/>
     <TextView
         android:id="@+id/textEmailUser"
@@ -27,7 +27,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:text="Email"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textColor="@android:color/black"/>
     <TextView
         android:id="@+id/textPhoneUser"
@@ -37,7 +37,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:text="Phone"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textColor="@android:color/black"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
