--- a/adminpanels/src/main/res/layout/spin_layout.xml
+++ b/adminpanels/src/main/res/layout/spin_layout.xml
@@ -5,6 +5,5 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:textColor="@android:color/black"
-    android:textSize="18dp">
-
+    android:textSize="18sp">
 </TextView>
