--- a/adminpanels/src/main/res/layout/waiting_dialog.xml
+++ b/adminpanels/src/main/res/layout/waiting_dialog.xml
@@ -21,9 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Loading. . ."
+        android:text="@string/loading"
         android:textColor="@color/colorTop"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
